finished functionality + extracted api

--- a/src/components/EstateCard/estatecard.scss
+++ b/src/components/EstateCard/estatecard.scss
@@ -48,3 +48,14 @@
     }
   }
 }
+
+.estate-card-loader {
+  border: 1px solid $color-border;
+  border-radius: 5px;
+  margin: 0 0.5rem;
+  text-align: center;
+  width: 417px;
+  height: 580px;
+  line-height: 580px;
+  background-color: #f2f3f5;
+}
