--- a/src/scss/variables/_variables.scss
+++ b/src/scss/variables/_variables.scss
@@ -1,5 +1,6 @@
 $color-heading: #999;
 $color-border: #dfdfdf;
+$color-loader: #f2f3f5;
 $color-text: #000;
 $color-selected: rgba(51, 146, 190, 0.5);
 $color-comparison-green: #7eda7e;
