--- a/src/components/EstateComparison/estatecomparison.scss
+++ b/src/components/EstateComparison/estatecomparison.scss
@@ -2,6 +2,7 @@
 
 .estate-comparison {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  margin-bottom: 4rem;
+  margin-bottom: 2rem;
 }
